--- a/pom.xml
+++ b/pom.xml
@@ -1,34 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>co.edu.unicauca.pagos</groupId>
     <artifactId>AcademicProjects.2</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
-   
-     <!-- Agregar la dependencia de JCalendar -->
+
     <dependencies>
+        <!-- JCalendar dependency -->
         <dependency>
             <groupId>com.toedter</groupId>
             <artifactId>jcalendar</artifactId>
             <version>1.4</version>
         </dependency>
-         <!-- Dependencia de Swing Layout Extensions -->
-    <dependency>
-        <groupId>org.jdesktop</groupId>
-        <artifactId>layout</artifactId>
-        <version>1.0.4</version>
-    </dependency>
-<!-- Dependencia de Swing Layout Extensions (solo una vez) -->
+
+        <!-- Swing Layout Extensions dependency -->
         <dependency>
-    <groupId>org.jdesktop</groupId>
-    <artifactId>layout</artifactId>
-    <version>1.0.4</version>
+            <groupId>org.jdesktop</groupId>
+            <artifactId>layout</artifactId>
+            <version>1.0.4</version>
+        </dependency>
+        <dependency>
+    <groupId>org.xerial</groupId>
+    <artifactId>sqlite-jdbc</artifactId>
+    <version>3.36.0.3</version>
 </dependency>
 
     </dependencies>
